Реализован до 20-го пункта (включительно)

--- a/BeggsAndBrill/BeggsAndBrill.vcxproj
+++ b/BeggsAndBrill/BeggsAndBrill.vcxproj
@@ -156,6 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BeggsAndBrillAlgorithm.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="IPVTBeggsAndBrill.h" />
     <ClInclude Include="IReadableBeggsAndBrill.h" />
     <ClInclude Include="resource.h" />
